{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 80,
  "lineage": "18aed060-2654-4a73-8c96-af410c17a543",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "portfolio-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:loadbalancer/app/portfolio-alb/b636f4ba3a3530d5",
            "arn_suffix": "app/portfolio-alb/b636f4ba3a3530d5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "portfolio-alb-435976225.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:loadbalancer/app/portfolio-alb/b636f4ba3a3530d5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "portfolio-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0477f95edb49a6c43"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bc38cf3a6b4c6b7"
              },
              {
                "subnet_id": "subnet-0860ec75717db8613"
              }
            ],
            "subnets": [
              "subnet-00bc38cf3a6b4c6b7",
              "subnet-0860ec75717db8613"
            ],
            "timeouts": {
            },
            "vpc_id": "vpc-058ce280b07bdebfb",
            "zone_id": "Z14GRHDCWA56QT"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "portfolio-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:listener/app/portfolio-alb/b636f4ba3a3530d5/af5fc1cf93179df8",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:620871201833:certificate/88774e63-2a21-4115-b5fe-a0ca38bd0161",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:targetgroup/portfolio-target/6029b1727cdc1801",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:listener/app/portfolio-alb/b636f4ba3a3530d5/af5fc1cf93179df8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:loadbalancer/app/portfolio-alb/b636f4ba3a3530d5",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "read": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "portfolio-alb-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:targetgroup/portfolio-target/6029b1727cdc1801",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:listener-rule/app/portfolio-alb/b636f4ba3a3530d5/af5fc1cf93179df8/a5545f8575de7f9b",
            "condition": [],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:listener-rule/app/portfolio-alb/b636f4ba3a3530d5/af5fc1cf93179df8/a5545f8575de7f9b",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:listener/app/portfolio-alb/b636f4ba3a3530d5/af5fc1cf93179df8",
            "priority": 99999,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "portfolio-target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:targetgroup/portfolio-target/6029b1727cdc1801",
            "arn_suffix": "targetgroup/portfolio-target/6029b1727cdc1801",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:620871201833:targetgroup/portfolio-target/6029b1727cdc1801",
            "load_balancing_algorithm_type": "round_robin",
            "name": "portfolio-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-058ce280b07bdebfb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "portfolio_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:internet-gateway/igw-0593e43870bf12042",
            "id": "igw-0593e43870bf12042",
            "owner_id": "620871201833",
            "tags": {
              "Name": "portfolio_igw"
            },
            "tags_all": {
              "Name": "portfolio_igw"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-058ce280b07bdebfb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "portfolio_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:route-table/rtb-0c2dcf02f2029c35d",
            "id": "rtb-0c2dcf02f2029c35d",
            "owner_id": "620871201833",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0593e43870bf12042",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "portfolio_route"
            },
            "tags_all": {
              "Name": "portfolio_route"
            },
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-058ce280b07bdebfb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "portfolio_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4e2f0714d0bca6b",
            "route_table_id": "rtb-0c2dcf02f2029c35d",
            "subnet_id": "subnet-0860ec75717db8613"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "portfolio_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011953fca8626a6a7",
            "route_table_id": "rtb-0c2dcf02f2029c35d",
            "subnet_id": "subnet-00bc38cf3a6b4c6b7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio-alb-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:security-group/sg-0477f95edb49a6c43",
            "description": "portfolio-alb-security",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ae283e2db24de9cf"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0477f95edb49a6c43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "portfolio-alb-security",
            "name_prefix": "",
            "owner_id": "620871201833",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-058ce280b07bdebfb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio_ecs_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:security-group/sg-0ae283e2db24de9cf",
            "description": "portfolio_ecs_security",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae283e2db24de9cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "portfolio_ecs_security",
            "name_prefix": "",
            "owner_id": "620871201833",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-058ce280b07bdebfb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio_rds_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:security-group/sg-0ceac474f1180946a",
            "description": "portfolio_rds_security",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ceac474f1180946a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ae283e2db24de9cf"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "portfolio_rds_security",
            "name_prefix": "",
            "owner_id": "620871201833",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null
            },
            "vpc_id": "vpc-058ce280b07bdebfb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "portfolio_private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:subnet/subnet-046b85d6715df0f91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046b85d6715df0f91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "620871201833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio_private_subnet1"
            },
            "tags_all": {
              "Name": "portfolio_private_subnet1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-058ce280b07bdebfb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "portfolio_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:subnet/subnet-0918240f01657bca3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0918240f01657bca3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "620871201833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio_private_subnet2"
            },
            "tags_all": {
              "Name": "portfolio_private_subnet2"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-058ce280b07bdebfb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "portfolio_public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:subnet/subnet-0860ec75717db8613",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0860ec75717db8613",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "620871201833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio_public_subnet1"
            },
            "tags_all": {
              "Name": "portfolio_public_subnet1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-058ce280b07bdebfb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "portfolio_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:subnet/subnet-00bc38cf3a6b4c6b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bc38cf3a6b4c6b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "620871201833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "portfolio_public_subnet2"
            },
            "tags_all": {
              "Name": "portfolio_public_subnet2"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-058ce280b07bdebfb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "portfolio_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:620871201833:vpc/vpc-058ce280b07bdebfb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08134d2fb9b7002c4",
            "default_route_table_id": "rtb-0f5a40921580836d7",
            "default_security_group_id": "sg-09a599f57fcd83810",
            "dhcp_options_id": "dopt-00e93c5dd2d7e8c08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058ce280b07bdebfb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5a40921580836d7",
            "owner_id": "620871201833",
            "tags": {
              "Name": "portfolio_vpc"
            },
            "tags_all": {
              "Name": "portfolio_vpc"
            }
          }
        }
      ]
    }
  ]
}